@@ -30,6 +30,8 @@
 	* lisp/sawfish/cfg/shell.jl: added apply-gtk-style-properties.
 	Currently only `appear-as-list' to GtkComboBoxText is passed
 
+	* lisp/sawfish/gtk/widgets/file.jl: removed the GtkEntry and GtkVBox
+
 2011-06-10  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/utils.jl: removed (funcs now in rep.util.misc)
 
